# dist-logger

./: Cargo.toml  README.md
ansible/: ansible.cfg  inventory.yaml  playbook.yml
ansible/services/: dlclient.service  dlserver.service
ansible/topologies/: fully_connected.json
proto/: greet.proto
scripts/: clean.sh  env.sh  listen_logs.sh  purge.sh  restore.sh  setup.sh  show_logs.sh  start.sh  stop.sh
src/: log.rs  main.rs
