[package]
name = "dist-logger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dl-client"
path = "src/bin/client.rs"

[[bin]]
name = "dl-server"
path = "src/bin/server.rs"

[dependencies]
chrono = { version = "0.4.39", features = ["now"] }
hostname = "0.4.0"
prost = "0.13.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "fs", "sync"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
